--- a/css/style.css
+++ b/css/style.css
@@ -10729,5 +10729,43 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/*
+orange, rose, violet
+rgba(243, 233, 241, var(--tw-bg-opacity))
+$primary: #22A1ED;
+$dark: #04040C;
+$headings-color: #284876;
+$card-bg: #FCFCFC;
+*/
+.bg-pinkORI {
+  background-color: #f2eaf0;
+}
+
+.purpleORI {
+  color: #5100ff;
+}
+
+.orangeORI {
+  color: #fd7e14;
+}
+
+.disable-link {
+  text-decoration: none;
+}
+
+header div.navbar.navbar-dark div.container button.navbar-toggler {
+  background-color: #5100ff;
+}
+
+.footerORI {
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  background-color: #f2eaf0;
+}
+
+.btn-outline-ORI:hover {
+  background-color: #f2eaf0;
+}
 
 /*# sourceMappingURL=style.css.map */
