func-glob+W3C+testsU_partOne

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,10 @@
     color: #fd7e14;
 }
 
+.pinkORI {
+    color: rgb(242, 234, 240);
+}
+
 // Animations en zoom :
 body main section div.container button:hover {
     transition: 250ms ease-in;
